# django-base

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
core/project/: urls.py
core/project/settings/: common.py  settings.dev.py  settings.py
